k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  namespace: cncf-board
  annotations:
    # GKE LoadBalancer를 사용. Google CLoud
    kubernetes.io/ingress.class: "gce" 
spec:
  defaultBackend: 
    service:
      name: frontend
      port:
        number: 80
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
